# MASTER-PFE

./: .gitignore  AUTHORING_FLOW.md  Dockerfile  E2E_TEST_REPORT.md  PROGRESS.md  RAILWAY.md  README.md  SESSION_NOTES.md  cloudflare-tunnel.sh  docker-compose.yml  langgraph.json  railway.toml  requirements.txt
agent/: .dockerignore  .env.example  Dockerfile  __init__.py  checkpointer.py  critic.py  deep_graph.py  frontend_shells.py  gc.py  graph.py  http_app.py  langgraph.json  llm.py  main.py  mcp_client.py  middleware.py  nixpacks.toml  nodes.py  prompts.py  pusher_bridge.py  railway.toml  requirements.txt  search.py  state.py  tools.py
agent/tests/: test_critic_feedback_channel.py  (+5 more)
agent_v2/: README.md  __init__.py  critic.py  graph.py  info_gather.py  persist.py  planner.py  router.py  schemas.py  state.py  writer.py
backend/: .env.example  .eslintrc.json  Dockerfile  eslint.config.mjs  package-lock.json  package.json  railway.toml  tsconfig.json
curriculum-mcp/: .env.example  Dockerfile  README.md  pyproject.toml  railway.json
curriculum-mcp/src/curriculum_mcp/: db.py  draft_store.py  draft_tools.py  models.py  server.py  tools.py  tools_activities.py
curriculum-mcp/tests/: test_activities.py  test_activities_draft.py  test_smoke.py
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  railway.toml  tailwind.config.js  tsconfig.tsbuildinfo
graph-viz/: Dockerfile  README.md  app.py  railway.toml  requirements.txt
skill/: README.md  composio.md
supabase/: MIGRATIONS_APPLIED.md  README.md
(+50 files in other folders)
