[project]
name = "curriculum-mcp"
version = "0.1.0"
description = "MCP server exposing curriculum (syllabus/chapter/lesson) tools backed by Supabase."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.2.0",
  "supabase>=2.8.0",
  "pydantic>=2.7",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "uvicorn>=0.30",
  "starlette>=0.37",
]

[project.scripts]
curriculum-mcp = "curriculum_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curriculum_mcp"]
